--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
     dataBinding {
         enabled = true
     }
+
+    lintOptions{
+        disable 'MissingDefaultResource'
+    }
 }
 
 dependencies {
